--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,10 +1,12 @@
 # .goreleaser.yml 配置文件
 # 详细文档: https://goreleaser.com/
 
+version: 2
+
 before:
   hooks:
     # 在构建前运行测试，设置环境变量SKIP_GIT_TESTS=true跳过依赖git命令的测试
-    - SKIP_GIT_TESTS=true go test -v ./... || { echo "测试失败"; exit 1; }
+    - env SKIP_GIT_TESTS=true go test -v ./... || { echo "测试失败"; exit 1; }
     # 确保依赖是最新的
     - go mod tidy
 
@@ -27,14 +29,18 @@ builds:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}}
 
 archives:
-  - format: tar.gz
-    # 仅对 darwin 和 linux 使用 tar.gz
-    format_overrides:
-      - goos: windows
-        format: zip
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    replacements:
-      darwin: macOS
+  - id: default
+    formats:
+      - tar.gz
+    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}'
+    files:
+      - README.md
+      - LICENSE
+      - prompts/*
+  - id: zip-archives
+    formats:
+      - zip
+    name_template: '{{ .ProjectName }}_{{ .Version }}_{{ if eq .Os "darwin" }}macOS{{ else }}{{ .Os }}{{ end }}_{{ .Arch }}'
     files:
       - README.md
       - LICENSE
@@ -43,8 +49,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 
-snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+snapshot: {}
 
 changelog:
   sort: asc
@@ -59,10 +64,13 @@ changelog:
 
 brews:
   - name: git-work-log
-    tap:
+    ids: [default]
+    repository:
       owner: kway-teow
       name: homebrew-tap
-    folder: Formula
+    commit_author:
+      name: goreleaserbot
+      email: bot@goreleaser.com
     homepage: https://github.com/kway-teow/git-work-log
     description: 一个基于Git提交记录自动生成报告的工具，使用Google Gemini AI进行智能总结
     license: MIT
